Manifest/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-svc
spec:
  selector:
    app: spring-petclinic
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
