Manifest/HTTPproxy.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  annotations:
  labels:
    app: spring-petclinic
  name: spring-petclinic-devops-httpproxy
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: spring-petclinic-svc
      port: 8080
  virtualhost:
    fqdn: spring-petclinic.devops.tanzu-altair.com
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  annotations:
  labels:
    app: spring-petclinic
  name: spring-petclinic-01-workload-httpproxy
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: spring-petclinic-svc
      port: 8080
  virtualhost:
    fqdn: spring-petclinic.01-workload.tanzu-altair.com
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  annotations:
  labels:
    app: spring-petclinic
  name: spring-petclinic-02-workload-httpproxy
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: spring-petclinic-svc
      port: 8080
  virtualhost:
    fqdn: spring-petclinic.02-workload.tanzu-altair.com
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  annotations:
  labels:
    app: spring-petclinic
  name: spring-petclinic-httpproxy
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: spring-petclinic-svc
      port: 8080
  virtualhost:
    fqdn: spring-petclinic.tanzu-altair.com
